--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -8,7 +8,7 @@ $line-height = 1.725
 // Colors
 $color-background = #1d1f21
 $color-link = rgba(212, 128, 170, 1) // vimeo: :selection with alpha=1
-$color-text = #c9cacc
+$color-text = #0b56a5
 $color-light = #cccccc
 $color-lightest = #eeeeee
 $color-accent = #2bbc8a
