--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -8,15 +8,20 @@ $line-height = 1.725
 // Colors
 $color-background = #1d1f21
 $color-link = rgba(212, 128, 170, 1) // vimeo: :selection with alpha=1
-$color-text = #0b56a5
+$color-text = #c9cacc
 $color-light = #cccccc
 $color-lightest = #eeeeee
-$color-accent = #2bbc8a
+$color-accent = #0b56a5
 $ease-in-sine = cubic-bezier(0.47, 0, 0.745, 0.715)
 
 // Logo
 logo-width = 0px + hexo-config("customize.logo.width")
 logo-height = 0px + hexo-config("customize.logo.height")
+
+logo-margin-top = 0px + hexo-config("customize.logo.position_top")
+logo-margin-right = 0px + hexo-config("customize.logo.position_right")
+logo-margin-bottom = 0px + hexo-config("customize.logo.position_bottom")
+logo-margin-left = 0px + hexo-config("customize.logo.position_left")
 
 // Code Highlight
 highlight = hexo-config("customize.highlight") || "tomorrow-night"
