--- a/source/css/_partial/post/actions_desktop.styl
+++ b/source/css/_partial/post/actions_desktop.styl
@@ -56,7 +56,7 @@
       line-height: 15px
       a
         margin-right: 15px
-        color: color-accent
+        color: $color-accent
       a:hover
           underline(5px, $color-accent)
       li
